ajout commentaire + interface de payment + restructuration des classes